# TaskFlow

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  Task.h  UserSession.cpp  UserSession.h  aboutuswnd.cpp  aboutuswnd.h  addtask.cpp  addtask.h  appicon.rc  appsettings.cpp  appsettings.h  appusageitem.cpp  appusageitem.h  appusagetracker.cpp  appusagetracker.h  build.ninja  calendarwidget.cpp  calendarwidget.h  calendarwnd.cpp  calendarwnd.h  calendarwndwidget.cpp  calendarwndwidget.h  categoryeditor.cpp  categoryeditor.h  categoryitemwidget.cpp  categoryitemwidget.h  changeaccountnamewnd.cpp  changeaccountnamewnd.h  changeimgwnd.cpp  changeimgwnd.h  changelanguagewnd.cpp  changelanguagewnd.h  changepasswnd.cpp  changepasswnd.h  choosecategory.cpp  choosecategory.h  (+69 more)
.cmake/api/v1/reply/: cache-v2-7d49a1c6f3f9bfc0bb1e.json  cmakeFiles-v1-a9c9aa7a38411be0c425.json  codemodel-v2-2b46b2feb2d2373f81fc.json  codemodel-v2-5e925b5f31a1afd5e803.json  codemodel-v2-6ec5c4e604bf71726595.json  codemodel-v2-dfb4d14168bd3c9cbf44.json  directory-.-Debug-4fe65a9a5dfbe73620b4.json  directory-.-Release-a9f4a674266c00b92a31.json  index-2025-06-04T18-15-24-0589.json  index-2025-06-07T20-21-51-0615.json  index-2025-06-08T17-50-08-0704.json  index-2025-06-09T13-22-32-0941.json  index-2025-06-12T14-25-13-0862.json  target-todo_app-Debug-0e6940d2a793ebd9cffb.json  target-todo_app-Debug-cd8486254e4c23f51642.json  target-todo_app-Debug-ea14c7145f55f2975521.json  target-todo_app-Release-4b18a621c5f4a09ef283.json  target-todo_app_autogen-Release-729d32ecb2cd4b016944.json  target-todo_app_autogen_timestamp_deps-Debug-f8439256986423c0daba.json
.cmake/api/v1/reply.prev/: cache-v2-3c54e7a5e91664cc6767.json  cmakeFiles-v1-21846683cc980f499888.json  codemodel-v2-61a1f099429fa41a5452.json  directory-.-Debug-3a8e19dfb353bf615d54.json  index-2025-06-04T15-09-54-0783.json  target-todo_app-Debug-847f64981086868345fb.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
todo_app_autogen/: deps  mocs_compilation.cpp
todo_app_autogen/EWIEGA46WW/: moc_aboutuswnd.cpp  moc_aboutuswnd.cpp.d  moc_appsettings.cpp  moc_appsettings.cpp.d  moc_appusagetracker.cpp  moc_appusagetracker.cpp.d  moc_calendarwidget.cpp  moc_calendarwidget.cpp.d  moc_calendarwnd.cpp  moc_calendarwnd.cpp.d  moc_categoryeditor.cpp  moc_categoryeditor.cpp.d  moc_categoryitemwidget.cpp  moc_categoryitemwidget.cpp.d  moc_changeaccountnamewnd.cpp  moc_changeaccountnamewnd.cpp.d  moc_changeimgwnd.cpp  moc_changeimgwnd.cpp.d  moc_changelanguagewnd.cpp  moc_changelanguagewnd.cpp.d  moc_changepasswnd.cpp  moc_changepasswnd.cpp.d  moc_choosecategory.cpp  moc_choosecategory.cpp.d  moc_choosepriority.cpp  moc_choosepriority.cpp.d  moc_circulartimerwidget.cpp  moc_circulartimerwidget.cpp.d  moc_createaccount.cpp  moc_createaccount.cpp.d  moc_deletebuttondelegate.cpp  moc_deletebuttondelegate.cpp.d  moc_edittask.cpp  moc_edittask.cpp.d  moc_flowlayout.cpp  moc_flowlayout.cpp.d  moc_focusmodewnd.cpp  moc_focusmodewnd.cpp.d  moc_helpandfeedbackwnd.cpp  moc_helpandfeedbackwnd.cpp.d  (+31 more)
translations/: Deutsch.qm  Español.qm  Français.qm  Português.qm  app_de.qm  app_de.ts  app_es.ts  app_fr.qm  app_fr.ts  app_pt.ts  app_ru.qm  app_ru.ts  Русский.qm
